--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,5 +2,7 @@
 
 <PageTitle>Index</PageTitle>
 
+<Background />
+
 <CharacterSheetStatic CharacterName="Ambi" />
 <CharacterSheetStatic CharacterName="Celia Vanguard" />
