--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,8 +1,6 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>The Black Tower</PageTitle>
 
-<Background />
-
-<CharacterSheetStatic CharacterName="Ambi" />
+<CharacterSheetRun CharacterName="Celia Vanguard" />
 <CharacterSheetStatic CharacterName="Celia Vanguard" />
