--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -3,7 +3,11 @@
 <PageTitle>BlackTower</PageTitle>
 
 <div class="page">
-	<main>
+	<main class="grid">
+		<Background />
+		<nav class="nav">
+			<Navbar />
+		</nav>
 		<article class="content">
 			@Body
 		</article>
