--- a/Pages/CharacterSheetRun.razor.css
+++ b/Pages/CharacterSheetRun.razor.css
@@ -1,136 +1,180 @@
-﻿html, body {
-	background-color: darkgrey;
-	font-family: 'wondermail';
-	height: 100%;
-	margin: 0;
+﻿.sheet-body {
+	background-color: transparent;
+	width: 850px;
+	display: grid;
+	grid-template-columns: 3fr 2fr;
+	grid-template-areas:
+		"bio skill-list"
+		"class skill-list";
+	padding: 0 20px 20px 20px;
+	gap: 6px;
 }
 
-* { box-sizing: border-box; }
-
-.page-body {
-	background-color: black;
-	height: 100%;
-	margin: auto;
-	padding: 20px;
-	width: 720px;
+.bio {
+	grid-area: bio;
+	min-width: 100%;
 }
 
-.box {
-	background-image: linear-gradient(to top left, black -100%, purple);
-	padding: 10px;
+.resources {
+	display: grid;
 	width: 100%;
+	grid-template-columns: 1fr 1fr;
+	grid-template-areas: "hp mp";
+	text-align: center;
+	margin-top: -6px;
 }
 
-.row {
-	align-items: flex-start;
-	display: flex;
-	flex-direction: row;
-	gap: 5px;
-	justify-content: space-between;
-	width: 100%;
-}
-
-.column {
-	align-items: center;
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-}
-
-.grid { display: grid; }
-
-.bordered { gap: 5px; }
-
-.even { justify-content: space-evenly; }
-
-.tight { justify-content: center; }
-
-.left { align-items: flex-start; }
-
-.right { align-items: flex-end; }
-
-.spacer { flex-grow: 1; }
-
-.row > .divider {
-	background-color: lime; /* fallback */
-	background-color: rgba(255, 255, 255, 0.50);
-	height: 90%;
-	width: 1px;
-}
-
-.column > .divider {
-	background-color: lime;
-	background-color: rgba(255, 255, 255, 0.50);
-	height: 1px;
-	margin-bottom: 5px;
-	margin-top: 5px;
-	width: 90%;
-}
-
-.divider:first-child, .divider:last-child { background: none; }
-
-.sheet-meta { padding: 10px; }
-
-.sheet-body {
-	background-color: lightgray;
-	background-image: linear-gradient(to top left, lightgrey, white);
-	border-radius: 5px;
-	color: white;
-	gap: 5px;
-	padding: 5px;
-	width: 100%;
+.class {
+	grid-area: class;
 }
 
 .name {
-	font-size: 1.5rem;
-	text-align: left;
+	font-size: 150%;
 }
 
-.character-image { width: 100%; }
+.pronouns {
+	margin-top: auto;
+	margin-bottom: auto;
+}
 
 .image-placeholder {
 	aspect-ratio: 1;
 	background: lightgrey;
 	color: grey;
-	height: 100px;
+	height: 128px;
 	text-align: center;
+	border: 2px solid white;
+	border-radius: 4px;
+}
+
+.image {
+	aspect-ratio: 1;
+	height: 128px;
 }
 
 .stats {
 	display: grid;
-	gap: 0 5%;
+	gap: 0 33%;
 	grid-template-columns: 1fr 1fr;
-	width: 100%;
+	width: 80%;
 }
 
-.class > .stats { }
-
-.stat { white-space: pre; }
-
-.green { color: #22da09; }
-
-.cyan { color: #06c8c1; }
-
-.orange { color: #e3b70f; }
-
-.blue { color: #009dff; }
-
-.red { color: #f25a5a; }
-
-.purple { color: #a97bff; }
-
-.positive { color: lightgreen; }
-
-.negative { color: lightcoral; }
-
-.zero { color: grey; }
-
-.stat-name { font-size: 1rem; }
-
-
-.character-info {
-	/*width: 50%;*/
-	gap: 2px;
+.stat {
+	white-space: pre;
 }
 
-.class { /*width: 50%;*/ }
+.green {
+	color: #22da09;
+}
+
+.cyan {
+	color: #06c8c1;
+}
+
+.orange {
+	color: #e3b70f;
+}
+
+.blue {
+	color: #009dff;
+}
+
+.red {
+	color: #f25a5a;
+}
+
+.purple {
+	color: #a97bff;
+}
+
+.positive {
+	color: lightgreen;
+}
+
+.negative {
+	color: lightcoral;
+}
+
+.zero {
+	color: grey;
+}
+
+.skill-list {
+	grid-area: skill-list;
+	/*height: 0;
+	min-height: 100%;*/
+}
+
+::deep .skill-list {
+	grid-template-columns: 2fr 1fr 1fr;
+}
+
+.dropdown-contents {
+	grid-column: 1 / -1;
+	height: 0;
+	overflow: hidden;
+	border: none;
+	margin-bottom: -2px;
+	padding-left: 1em;
+}
+
+.dropdown {
+	border-top: 1px transparent;
+	background-color: transparent;
+}
+
+.hidden-check:hover + .dropdown, .hidden-check:hover + .dropdown + .dropdown, .hidden-check:hover + .dropdown + .dropdown + .dropdown {
+	background-color: rgba(255, 255, 255, 0.25);
+}
+
+.hidden-check:checked + .dropdown, .hidden-check:checked + .dropdown + .dropdown, .hidden-check:checked + .dropdown + .dropdown + .dropdown {
+	border-top: 1px solid;
+}
+
+	.hidden-check:checked + .dropdown + .dropdown + .dropdown + .dropdown-contents {
+		height: auto;
+		border-bottom: 1px solid;
+		margin-bottom: 0;
+	}
+
+.hidden-check {
+	display: none;
+}
+
+.bar {
+	background-color: grey;
+	width: 90%;
+	height: 2px;
+	margin: -6px auto auto auto;
+}
+
+.hp-bar {
+	background-color: #22da09;
+	height: 100%;
+}
+
+.mp-bar {
+	background-color: #06c8c1;
+	height: 100%;
+}
+
+.preserve-whitespace {
+	white-space: pre;
+}
+
+.resource-input {
+	width: 38px;
+	font-family: inherit;
+	font-size: inherit;
+	background-color: transparent;
+	border: none;
+	color: inherit;
+	-moz-appearance: textfield;
+	appearance: textfield;
+	text-shadow: inherit;
+	text-align: right;
+}
+
+.resource-input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+}
