--- a/Shared/MainLayout.razor.css
+++ b/Shared/MainLayout.razor.css
@@ -1,62 +1,16 @@
-.page {
-	display: flex;
-	flex-direction: column;
-	position: relative;
+.grid {
+	display: grid;
+	grid-template-columns: 200px auto;
+	grid-template-areas:
+		"nav content";
+	gap: 10px;
+	max-width: 1500px;
+	margin: auto;
 }
 
-main { flex: 1; }
-
-.sidebar {
-	background-color: lime;
-	background-image: linear-gradient(to top left, black -100%, purple);
+.nav {
+	grid-area: nav;
 }
-
-.top-row {
-	align-items: center;
-	background-color: #f7f7f7;
-	border-bottom: 1px solid #d6d5d5;
-	display: flex;
-	height: 3.5rem;
-	justify-content: flex-end;
-}
-
-.top-row ::deep a, .top-row .btn-link {
-	margin-left: 1.5rem;
-	white-space: nowrap;
-}
-
-.top-row a:first-child {
-	overflow: hidden;
-	text-overflow: ellipsis;
-}
-
-
-.page { flex-direction: row; }
-
-.sidebar {
-	height: 100vh;
-	position: sticky;
-	top: 0;
-	width: 15vw;
-}
-
-.top-row {
-	position: sticky;
-	top: 0;
-	z-index: 1;
-}
-
-.top-row, article {
-	/*padding-left: 2rem !important;
-	padding-right: 1.5rem !important;*/
-}
-
-.chatbar {
-	background-color: lime;
-	background-image: linear-gradient(to top left, black -100%, purple);
-	height: 100vh;
-	position: sticky;
-	right: 0;
-	top: 0;
-	width: 25vw;
+.content {
+	grid-area: content;
 }
