Things and stuff

--- a/Pages/CharacterSheetStatic.razor
+++ b/Pages/CharacterSheetStatic.razor
@@ -1,6 +1,4 @@
-﻿@page "/character-sheet-static"
-
-<div class="sheet-body">
+﻿<div class="sheet-body">
 	<div class="bio box center">
 		<div class="row">
 			<div class="image-placeholder">
