--- a/Pages/FetchData.razor
+++ b/Pages/FetchData.razor
@@ -1,5 +1,4 @@
-﻿@page "/fetchdata"
-@using BlackTower.Data
+﻿@using BlackTower.Data
 @inject WeatherForecastService ForecastService
 
 <PageTitle>Weather forecast</PageTitle>
