--- a/Shared/Navbar.razor
+++ b/Shared/Navbar.razor
@@ -1,5 +1,6 @@
 ﻿<div class="navheader">Navigation</div>
 <div class="navlist">
-    <div class="box navitem">Current Run</div>
-    <div class="box navitem">Characters</div>
+    <NavLink class="navitem box" href="/session">Session</NavLink>
+    <NavLink class="navitem box" href="/characters">Characters</NavLink>
+    <NavLink class="navitem box" href="/bank">Bank</NavLink>
 </div>
