--- a/client/assets/templates/character-sheet-session.html
+++ b/client/assets/templates/character-sheet-session.html
@@ -1,10 +1,18 @@
 <div class="sheet-body">
     <div class="bio box center row">
         <div class="row">
-            <div class="image-placeholder">
-                <img class="image" data-update="image" src="" alt="Loading..." />
+            <div class="column">
+                <div class="image-placeholder">
+                    <img class="image" data-update="image" src="" alt="Loading..." />
+                </div>
+                <img class="gems" data-update="gems" src="/assets/textures/gem-slots.png"></img>
+                <canvas class="buffs" id="{cID}-buffs-canvas">
+                    <img class="buff" src="/assets/images/buffs/str-up.png"></img>
+                    <img class="buff" src="/assets/images/buffs/mag-up.png"></img>
+                    <img class="buff" src="/assets/images/buffs/def-down.png"></img>
+                </canvas>
             </div>
-            <div class="column left">
+            <div class="column">
                 <div class="row">
                     <span class="name" data-update="name">Loading...</span>
                     <span class="pronouns">
@@ -44,67 +52,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-    <div class="gems box">
-        <div class="gem-row">
-            <img class="gem-slot" id="gem-slot-1" src="/assets/images/gem-slot.png"></img>
-            <span id="gem-name-1">Empty</span>
-        </div>
-        <div class="gem-row">
-            <img class="gem-slot" id="gem-slot-2" src="/assets/images/gem-slot.png"></img>
-            <span id="gem-name-2">Empty</span>
-        </div>
-        <div class="gem-row">
-            <img class="gem-slot" id="gem-slot-3" src="/assets/images/gem-slot.png"></img>
-            <span id="gem-name-3">Empty</span>
-        </div>
-        <div class="gem-row">
-            <img class="gem-slot" id="gem-slot-4" src="/assets/images/gem-slot.png"></img>
-            <span id="gem-name-4">Empty</span>
-        </div>
-        <div class="gem-row">
-            <img class="gem-slot" id="gem-slot-5" src="/assets/images/gem-slot.png"></img>
-            <span id="gem-name-4">Empty</span>
-        </div>
-        <div class="gem-row">
-            <img class="gem-slot" id="gem-slot-6" src="/assets/images/gem-slot.png"></img>
-            <span id="gem-name-4">Empty</span>
-        </div>
-    </div>
-
-    <div class="items box">
-    </div>
-
-    <div class="skill-list-1 box column center">
-        <span class="skill-title name center-text"><span data-update="specialtyClass-name">Loading</span>
-            Skills</span>
-
-        <div class="hori-divider"></div>
-
-        <div class="table">
-            <div class="table-header">
-                <span class="center-text">Name</span>
-                <span class="right-text">PWR</span>
-                <span class="right-text">MP</span>
-            </div>
-            <div class="table-content" data-update="specialtyClass-skills"></div>
-        </div>
-    </div>
-
-    <div class="skill-list-2 box column center">
-        <span class="skill-title name center-text"><span data-update="specialtyClass-name">Loading</span>
-            Skills</span>
-
-        <div class="hori-divider"></div>
-
-        <div class="table">
-            <div class="table-header">
-                <span class="center-text">Name</span>
-                <span class="right-text">PWR</span>
-                <span class="right-text">MP</span>
-            </div>
-            <div class="table-content" data-update="specialtyClass-skills"></div>
         </div>
     </div>
 </div>
