Remove unused image calls

--- a/client/assets/templates/character-sheet-session.html
+++ b/client/assets/templates/character-sheet-session.html
@@ -6,11 +6,7 @@
                     <img class="image" data-update="image" src="" alt="Loading..." />
                 </div>
                 <img class="gems" data-update="gems" src="/assets/textures/gem-slots.png"></img>
-                <canvas class="buffs" id="{cID}-buffs-canvas">
-                    <img class="buff" src="/assets/images/buffs/str-up.png"></img>
-                    <img class="buff" src="/assets/images/buffs/mag-up.png"></img>
-                    <img class="buff" src="/assets/images/buffs/def-down.png"></img>
-                </canvas>
+                <canvas class="buffs" id="{cID}-buffs-canvas"></canvas>
             </div>
             <div class="column">
                 <div class="row">
