--- a/client/assets/templates/navbar.html
+++ b/client/assets/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav>
-	<div class="navheader">Navigation</div>
+	<div class="navheader" id="navbar-header">Navigation</div>
 	<ul class="navlist">
 		<li class="navitem">
 			<a href="/session">Current Session</a>
