--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -32,6 +32,11 @@ body {
     line-height: 1;
 }
 
+button {
+    font-family: unset;
+    font-size: inherit;
+}
+
 a {
     text-decoration: none;
     color: var(--text-color);
@@ -222,4 +227,50 @@ h1 {
     height: 2px;
     margin-top: 8px;
     margin-bottom: 8px;
+}
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip .tooltip-text {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+
+    position: absolute;
+    z-index: 1;
+}
+
+.tooltip:hover .tooltip-text {
+    visibility: visible;
+}
+
+body:not(.dm-mode) .dm-only {
+    display: none;
+}
+
+.console {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 1em;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, var(--box-opacity));
+    color: var(--text-color);
+    z-index: 100;
+    font-size: 100%;
+}
+
+.console-input {
+    margin-left: 8px;
+}
+
+.hidden {
+    display: none;
 }
