--- a/server/assets/templates/common.html
+++ b/server/assets/templates/common.html
@@ -20,6 +20,7 @@
         <div class="nav box" id="navbar"></div>
         $$body
         <div class="console hidden" id="console">
+            <div class="console-log" id="console-log"></div>
             <div class="console-input" id="console-input"></div>
         </div>
     </div>
