--- a/server/assets/templates/common.html
+++ b/server/assets/templates/common.html
@@ -19,10 +19,8 @@
     <div class="main-layout">
         <div class="nav box" id="navbar"></div>
         $$body
-        <div class="console hidden" id="console">
-            <div class="console-log" id="console-log"></div>
-            <div class="console-input" id="console-input"></div>
-        </div>
+        <div class="console" id="console"></div>
+        <div class="console-input hidden" id="console-input"></div>
     </div>
 </body>
 
