--- a/client/assets/templates/character-sheet-full.html
+++ b/client/assets/templates/character-sheet-full.html
@@ -71,8 +71,7 @@
 
         <div class="table">
             <div class="table-header">
-                <span class="center-text">Name</span>
-                <span class="right-text">PWR</span>
+                <span class="center-text">Skill Name</span>
                 <span class="right-text">MP</span>
             </div>
             <div class="table-content" data-update="specialtyClass-skills"></div>
